# handhold-courses

./: .gitattributes  .gitignore
cpp-mini-sqlite/: .gitignore  handhold.yaml
cpp-mini-sqlite/labs/12-capstone/scaffold/: CMakeLists.txt
cpp-mini-sqlite/labs/12-capstone/scaffold/src/: helpers.cpp  main.cpp  solution.cpp
cpp-mini-sqlite/labs/12-capstone/scaffold/test/: test.cpp
cpp-mini-sqlite/labs/13-profiling/scaffold/: CMakeLists.txt
cpp-mini-sqlite/labs/13-profiling/scaffold/src/: solution.cpp  solution.h
cpp-mini-sqlite/labs/13-profiling/scaffold/test/: test.cpp
cpp-mini-sqlite/steps/: 00-recap.md  01-expected.md  02-what-is-a-database.md  03-pages.md  04-memory.md  05-btree.md  06-rows.md  07-tokenizer.md  08-parser.md  09-executor.md  10-where.md  11-profiling.md  12-cache-lines.md  13-simd.md  14-concurrency.md  15-joins.md
frontend-masterclass/: .gitattributes  CURRICULUM.md  RESEARCH.md  handhold.yaml
frontend-masterclass/audio/: 0077e6769804ea77.timings  00a1c07bd663d4b3.timings  0196a307c38a25aa.timings  019d1f5d3a59446b.timings  03728cfcc77d5b81.timings  042574c5af92c8f8.timings  0427c56b4e18fa61.timings  0520bbaface465f2.timings  06de2e6209b3d9da.timings  07ee2e42a6a78810.timings  082e36ab94f9349d.timings  083e677e2c8f34ba.timings  0a0604f8003d76cd.timings  0a91c0d8fa610f7d.timings  0ada4a4cc0001b26.timings  0ba7a914a9e015d3.timings  0ce9f68dc5dd0e4e.timings  0ddbbfb509d78217.timings  1106a9d818775248.timings  11a145016c2144b7.timings  121cede3d7a78d2e.timings  12267c2d67905a9a.timings  12a46af9ec81e784.timings  12ce99057e3720af.timings  1401ec44c398a3f2.timings  154a1ff958531cc8.timings  154a91e9dfbd5277.timings  170a7b2e70697858.timings  18645705ccad3cb1.timings  1a163ca8362024eb.timings  1c3b19d734e1632f.timings  (+178 more)
git-mastery/: .gitignore  handhold.yaml  verify-labs.sh
modern-cpp-algorithms/: handhold.yaml
modern-cpp-algorithms/labs/21-constraint-solver/scaffold/: CMakeLists.txt
modern-cpp-algorithms/labs/21-constraint-solver/scaffold/src/: solution.cpp  solution.h
modern-cpp-algorithms/labs/21-constraint-solver/scaffold/test/: test.cpp
(+964 files in other folders)
